[package]
name = "deadlock-external"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.1", features = ["glow", "serde"] }
egui_extras = { version = "0.31.1", features = ["image"] }
serde = { version = "1.0.219" , features = ["derive"] } 
clap = { version = "4.5.38", features = ["derive"]}
egui = {version = "0.31.1", features = ["serde"]}
serde_json = { version = "1.0.140"} 
egui-notify = "0.19.0"
env_logger = "0.11.8"
sysinfo = "0.35.0"
emath = "0.31.1"
log = "0.4.27"
windows = { version = "0.61.1", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "System",
    ] }
# reqwest = { version = "0.12.8", features = ["blocking"]}